# specforge

./: CLAUDE.md  Cargo.toml  README.md
.claude/commands/: plan.md  spec.md  stories.md  tasks.md
.github/ISSUE_TEMPLATE/: feature-specification.md
.templates/: plan.md  specification.md  story.md
cli/src/: file_ops.rs  lib.rs  main.rs
cli/src/cli/: init.rs  mod.rs
cli/src/config/: mod.rs
cli/src/templates/: claude.rs  copilot.rs  mod.rs
cli/tests/: integration_tests.rs
docs/architecture/: 01-introduction.md  02-constraints.md  03-context-and-scope.md  04-solution-strategy.md  05-building-blocks-view.md  06-runtime-scenarios.md  07-deployment-view.md  08-concepts.md
docs/specifications/001-init-command/: SPECIFICATION.md  feature.md
docs/specifications/001-init-command/stories/001-project-configuration-setup/: PLAN.md  RESEARCH.md  STORY.md
docs/specifications/001-init-command/stories/002-basic-init-command/: PLAN.md  RESEARCH.md  STORY.md
docs/specifications/001-init-command/stories/003-init-with-agent-flag/: STORY.md
docs/specifications/001-init-command/stories/004-init-with-output-directory/: STORY.md
docs/specifications/001-init-command/stories/005-existing-files-confirmation/: STORY.md
docs/specifications/001-init-command/stories/006-error-handling/: STORY.md
docs/specifications/001-init-command/stories/007-edge-cases/: STORY.md
src/: error.rs  file_ops.rs  lib.rs  main.rs
src/cli/: init.rs
src/config/: project.rs
tests/: integration_init.rs
website/: package-lock.json  package.json
(+24 files in other folders)
