[package]
name = "reforge"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
